--- a/AddressViz/frontend/public/index.html
+++ b/AddressViz/frontend/public/index.html
@@ -8,6 +8,8 @@
     <title>frontend</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
+    <script src="http://www.openlayers.org/api/OpenLayers.js"></script> 
+    <script src="http://www.openstreetmap.org/openlayers/OpenStreetMap.js"></script> 
   </head>
   <body>
     <noscript>
